--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Consulta de Registros</title>
+  <title>Tabelas do Crédito Rural e do Proagro</title>
   <!-- Adicione os links para os estilos do Bootstrap e DataTables.js -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
 </head>
 <body>
   <div class="container mt-4">
-    <h1 class="mb-4">Consulta de Registros</h1>
+    <h1 class="mb-4">Empreendimento</h1>
     <div class="row">
       <div class="col-md-6 mb-3">
         <label for="pesquisa" class="form-label">Pesquisar:</label>
