--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarsExample07">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="./">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Empreendimento</a>
+                <a class="nav-link" href="./empreendimento.html">Empreendimento</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sistema de Produção</a>
+                <a class="nav-link" href="./sistema-producao.html">Sistema de Produção</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Aliquota Proagro</a>
+                <a class="nav-link" href="./aliquota-proagro.html">Aliquota Proagro</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
